<resources>
    <string name="app_name">MyInstagramClone</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="private_information">Private Information</string>
    <string name="bio">Bio</string>
    <string name="website">Website</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign up</b></string>
</resources>
