<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/toolbar_title"
                android:text="dev.android.maks"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                style="@style/toolbar_image"
                android:src="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/photo"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_profile"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <TextView
        android:id="@+id/tv_post_count"
        style="@style/profile_text_count"
        android:text="50"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_profile"
        app:layout_constraintEnd_toEndOf="@id/tv_posts"
        app:layout_constraintStart_toStartOf="@id/tv_posts"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_followers_count"
        style="@style/profile_text_count"
        android:text="100"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_post_count"
        app:layout_constraintEnd_toEndOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers" />

    <TextView
        android:id="@+id/tv_following_count"
        style="@style/profile_text_count"
        android:text="200"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_post_count"
        app:layout_constraintEnd_toEndOf="@id/tv_following"
        app:layout_constraintStart_toStartOf="@id/tv_following" />

    <TextView
        android:id="@+id/tv_posts"
        style="@style/profile_text"
        android:text="@string/posts"
        app:layout_constraintEnd_toStartOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_post_count" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/profile_text"
        android:text="@string/followers"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_posts"
        app:layout_constraintEnd_toStartOf="@id/tv_following"
        app:layout_constraintStart_toEndOf="@id/tv_posts" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/profile_text"
        android:text="@string/following"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_posts"
        app:layout_constraintEnd_toEndOf="@id/btn_edit_profile"
        app:layout_constraintStart_toEndOf="@id/tv_followers" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_bg"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="Edit Profile"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/iv_profile" />


    <include layout="@layout/bottom_nav_view" />

</android.support.constraint.ConstraintLayout>